Fixed #333: Do not allow the floating elements to overflow to the other cards

--- a/article-style.css
+++ b/article-style.css
@@ -48,7 +48,7 @@ pre
    behave better (have some space before the start of article) */
 .gdarticle
 {
-  display: block;
+  display: table-cell;
   padding-top: 1px;
   margin-top: -9px;
   margin-bottom: 8px;
